docker-registry/docker-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-deployment
  namespace: production
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - image: registry:2
          name: docker-registry
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: /certs
            - name: registry-volume
              mountPath: /var/lib/registry
      volumes:
        - name: secret-volume
          secret:
            secretName: docker-registry-secrets
        - name: registry-volume
          persistentVolumeClaim:
            claimName: docker-registry-data
