docker-registry/docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  namespace: production

spec:
  type: NodePort
  selector:
    app: docker-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32000
